🛠 render addReview component when only when user is logged in. Fix the rating star to actually use a star icon, and it also fix the alignment issue on mobile view.

--- a/supp2u/src/components/Reviews/add/addReviewStyle.sass
+++ b/supp2u/src/components/Reviews/add/addReviewStyle.sass
@@ -13,6 +13,7 @@
       font-size: 14px
       border: 1px solid rgba(128, 128, 128, 0.22)
       padding: 5px
+      transition: all .2s ease-in-out
       &:hover
         background-color: #125999
         color: white
